# knowledgebase

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/models/: elasticModels.py  responseModels.py
backend/routes/: search.py
frontend/: .gitignore  Dockerfile  nuxt.config.js  package-lock.json  package.json  svelte.config.js
frontend/components/: Search.vue
frontend/pages/: index.vue
frontend/pages/entry/: _id.vue
frontend/src/: app.html
frontend/src/components/: NewKnowledgeEntryModal.svelte  SearchResultsTable.svelte
frontend/src/routes/: index.svelte
frontend/src/routes/entry/: [slug].svelte
