[tool.poetry]
name = "knowledgebase-backend"
version = "0.1.0"
description = "Backend API for Knowledgebase"
authors = ["Andrew Guest <andrew.guest@cerner.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
secure = "^0.3.0"
gunicorn = "^20.1.0"
elasticsearch = "^7.15.0"
elasticsearch-dsl = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
